--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,7 @@ h6 {
     font-family: var(--fontHeading);
     font-weight: 600;
 }
+
 .contenedor {
     width: min(90%, 160rem);
     margin: 0 auto;
@@ -121,31 +122,38 @@ h6 {
         background-size: contain;
         background-position: top;
     }
-    .landing__imagen img{
+
+    .landing__imagen img {
         width: 90%;
     }
-    .header{
+
+    .header {
         margin-top: 2rem;
     }
-    .header img{
+
+    .header img {
         width: 40%;
-        
+
     }
+
     .landing {
         display: block;
         text-align: center;
         margin-top: 6rem;
     }
-    .landing__contenido{
+
+    .landing__contenido {
         padding: 0;
         margin-top: 4rem;
     }
+
     .contenido__titulo {
         font-size: 2.8rem;
     }
 
-    .social{
+    .social {
         justify-content: center;
-        margin-top: 7rem;
+        margin-top: 6rem;
+        margin-bottom: 2rem;
     }
 }
